build: Update dependencies in importmap
Updated dependencies to align with recent versions and remove unused packages. Also, removed direct reference to index.css as it's likely handled by Vite build.

--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
         }
       })();
     </script>
-  <link rel="stylesheet" href="/index.css">
 </head>
   <body>
     <div id="root"></div>
@@ -116,25 +115,23 @@
     "react-dom/client": "https://aistudiocdn.com/react-dom@^19.1.1/client",
     "recharts": "https://aistudiocdn.com/recharts@^3.2.1",
     "uuid": "https://aistudiocdn.com/uuid@^9.0.1",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.20.0",
-    "vite": "https://aistudiocdn.com/vite@^7.1.7",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
-    "fs/": "https://aistudiocdn.com/fs@^0.0.1-security/",
+    "sqlite3": "https://aistudiocdn.com/sqlite3@^5.1.7",
+    "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1",
+    "serverless-http": "https://aistudiocdn.com/serverless-http@^4.0.0",
+    "vite": "https://aistudiocdn.com/vite@^7.1.8",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "url": "https://aistudiocdn.com/url@^0.11.4",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "react/": "https://aistudiocdn.com/react@^19.1.1/",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.3",
-    "globals": "https://aistudiocdn.com/globals@^16.4.0",
-    "eslint/": "https://aistudiocdn.com/eslint@^9.36.0/",
-    "eslint-plugin-react-hooks": "https://aistudiocdn.com/eslint-plugin-react-hooks@^5.2.0",
-    "eslint-plugin-react-refresh": "https://aistudiocdn.com/eslint-plugin-react-refresh@^0.4.21",
     "@eslint/js": "https://aistudiocdn.com/@eslint/js@^9.36.0",
-    "typescript-eslint": "https://aistudiocdn.com/typescript-eslint@^8.44.1",
-    "serverless-http": "https://aistudiocdn.com/serverless-http@^4.0.0",
-    "sqlite3": "https://aistudiocdn.com/sqlite3@^5.1.7",
-    "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1"
+    "eslint-plugin-react-refresh": "https://aistudiocdn.com/eslint-plugin-react-refresh@^0.4.23",
+    "eslint/": "https://aistudiocdn.com/eslint@^9.36.0/",
+    "globals": "https://aistudiocdn.com/globals@^16.4.0",
+    "typescript-eslint": "https://aistudiocdn.com/typescript-eslint@^8.45.0",
+    "eslint-plugin-react-hooks": "https://aistudiocdn.com/eslint-plugin-react-hooks@^6.1.0"
   }
 }
 </script>
