--- a/index.html
+++ b/index.html
@@ -105,18 +105,13 @@
         }
       })();
     </script>
-</head>
-  <body>
-    <div id="root"></div>
-    <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://aistudiocdn.com/react@^19.1.1",
-    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.1.1/client",
-    "recharts": "https://aistudiocdn.com/recharts@^3.2.1",
-    "uuid": "https://aistudiocdn.com/uuid@^9.0.1",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
+    "recharts": "https://aistudiocdn.com/recharts@^3.2.1",
     "@eslint/js": "https://aistudiocdn.com/@eslint/js@^9.36.0",
     "globals": "https://aistudiocdn.com/globals@^16.4.0",
     "eslint-plugin-react-hooks": "https://aistudiocdn.com/eslint-plugin-react-hooks@^6.1.0",
@@ -125,16 +120,19 @@
     "eslint/": "https://aistudiocdn.com/eslint@^9.36.0/",
     "vite": "https://aistudiocdn.com/vite@^7.1.8",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.0.4",
+    "uuid": "https://aistudiocdn.com/uuid@^13.0.0",
     "express": "https://aistudiocdn.com/express@^5.1.0",
     "cors": "https://aistudiocdn.com/cors@^2.8.5",
-    "sqlite3": "https://aistudiocdn.com/sqlite3@^5.1.7",
-    "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1",
     "path": "https://aistudiocdn.com/path@^0.12.7",
     "url": "https://aistudiocdn.com/url@^0.11.4",
-    "serverless-http": "https://aistudiocdn.com/serverless-http@^4.0.0"
+    "sqlite3": "https://aistudiocdn.com/sqlite3@^5.1.7",
+    "sqlite": "https://aistudiocdn.com/sqlite@^5.1.1"
   }
 }
 </script>
+</head>
+  <body>
+    <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
